Fix Subtitle on mobile

--- a/src/components/Subtitle/index.module.css
+++ b/src/components/Subtitle/index.module.css
@@ -1,19 +1,28 @@
-.Subtitle {
+.root {
   font-family: "Acta Headline";
-  font-size: 40px;
+  font-size: 28px;
   font-weight: 400;
-  line-height: 56px;
+  line-height: 40px;
 }
 
-.Subtitle.Subtitle--white {
+.root.black {
+  color: #403f4c;
+}
+
+.root.white {
   color: #fcfcfc;
+}
+
+@media (min-width: 321px) {
+  font-size: 40px;
+  line-height: 56px;
 }
 
 /**
  * Fix for Firefox font rendering issues.
  */
 @-moz-document url-prefix() {
-  .Subtitle {
+  .root {
     font-weight: lighter;
   }
 }
